# NDKPratice

./: .gitmodules  gradlew  gradlew.bat  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/pananfly/ndkpratice/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pananfly/ndkpratice/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/pananfly/ndkpratice/: ExampleUnitTest.kt
cJSON/: CMakeLists.txt  build.gradle
cJSON/src/androidTest/java/com/pananfly/cjson/: ExampleInstrumentedTest.kt
cJSON/src/main/: AndroidManifest.xml
cJSON/src/main/cpp/: cJSONImpl.c
cJSON/src/main/java/com/pananfly/cjson/: CJSONActivity.kt  cJSONImpl.kt
cJSON/src/main/res/values/: strings.xml
cJSON/src/main/runalone/: AndroidManifest.xml
cJSON/src/test/java/com/pananfly/cjson/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
loacalsocket/: CMakeLists.txt  build.gradle
loacalsocket/src/androidTest/java/com/pananfly/loacalsocket/: ExampleInstrumentedTest.kt
loacalsocket/src/main/: AndroidManifest.xml
loacalsocket/src/main/cpp/: config.h.in  localsocket.c  lsocket.c  lsocket.h
loacalsocket/src/main/cpp/common/: jni_log.h  jni_register.c  jni_register.h  jni_thread.c  jni_thread.h  p_mutex.c  p_mutex.h  p_thread.c  p_thread.h
loacalsocket/src/main/cpp/j4a/: j4a_allclasses.c  j4a_allclasses.include.h  j4a_allclasses.loader.h  j4a_base.c
loacalsocket/src/main/cpp/j4a/class/android/net/: LocalServerSocket.c  LocalServerSocket.h  LocalServerSocket.include.j4a  LocalServerSocket.loader.j4a  LocalSocket.c  LocalSocket.h  LocalSocket.include.j4a  LocalSocket.loader.j4a  LocalSocketAddress.c  LocalSocketAddress.h  LocalSocketAddress.include.j4a  LocalSocketAddress.loader.j4a
loacalsocket/src/main/cpp/j4a/class/com/pananfly/loacalsocket/: LocalSocketJNIHelper.java  local_socket_helper.c  local_socket_helper.h  local_socket_helper.include.j4a  local_socket_helper.loader.j4a
loacalsocket/src/main/cpp/j4a/class/java/io/: InputStream.c  InputStream.h  InputStream.include.j4a  InputStream.loader.j4a  OutputStream.c  OutputStream.h  OutputStream.include.j4a  OutputStream.loader.j4a
loacalsocket/src/main/cpp/j4a/java/android/net/: LocalServerSocket.java  LocalSocket.java  LocalSocketAddress.java
loacalsocket/src/main/cpp/j4a/java/java/io/: InputStream.java  OutputStream.java
loacalsocket/src/main/java/com/pananfly/loacalsocket/: LocalSocketActivity.kt  LocalSocketClient.kt  LocalSocketJNIHelper.kt  LocalSocketServer.kt  LocalSocketService.kt  LocalSocketService2.kt
loacalsocket/src/main/java/com/pananfly/loacalsocket/annotations/: AccessdByNative.kt  CalledByNative.kt
loacalsocket/src/main/java/com/pananfly/loacalsocket/service/: LocalSocketService.kt
loacalsocket/src/main/res/layout/: localsocket_main.xml
loacalsocket/src/main/res/values/: strings.xml
loacalsocket/src/test/java/com/pananfly/loacalsocket/: ExampleUnitTest.kt
